# mlearn2

./: KMP-algorithm.py  README.md  Rabin-Karp.py  Untitled.ipynb  atolfromtol_runge-cutte.py  check_ecranirovanie.py  cyckle.ipynb  elyrapipeline_titanic.pipeline  imptry.py  lab07-cnn-1-pytorch (1).ipynb  lab07-cnn-1-pytorch-changed.ipynb  lab07-cnn-1-pytorch_right.ipynb  lab07-cnn-1.ipynb  lab07-cnn-2-transfer.ipynb  lab07-cnn-2-transfer_(pytorch).ipynb  main.py  main2.py  main3sost.py  main4gauss.py  naive.py  neuro.py  neuro2Perceptron.py  neuro3DVC.py  neuro_svertochie_nets.py  notebook0ce6a01cd4.ipynb  package-lock.json  probFlask.py  runge-cutte2por.py  runge-cutte2por_prob.py  runge-cutte_2part_auto_step.py  runge-cutte_2part_auto_step_prob.py  runge-cutte_pogr_from_x.py  sis80.ipynb  sostrichardson.py  sostrichardsoneps.py  text.txt  titanic1.ipynb  titanic1.py  titanic2.ipynb  transfer_learning.py  (+8 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cosmetics-checkpoint.html  cyckle-checkpoint.ipynb  elyrapipeline_titanic-checkpoint.pipeline  (+14 more)
DVC4_iris_f/: README.md  logs.csv  prepare_data.py  pyproject.toml  requirements.txt  train.py
DVC4_iris_f/.dvc/: config
DVC4_iris_f/configs/model/: log_reg.yaml
DVC4_iris_f/data/: .gitignore
DVC4_iris_f/outputs/2023-12-17/14-43-55/.hydra/: hydra.yaml
DVC4_iris_f/outputs/2023-12-17/14-43-56/.hydra/: config.yaml  hydra.yaml
DVC4_iris_f/outputs/2023-12-18/21-26-47/.hydra/: hydra.yaml
DVC4_iris_f/outputs/2023-12-18/21-28-44/.hydra/: hydra.yaml
DVC4_iris_f/outputs/2023-12-18/21-32-41/.hydra/: hydra.yaml
(+33 files in other folders)
