[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.36"
]
build-backend = "setuptools.build_meta"

[project]
name = "hydra_exp"
authors =[ { name="None"  }]
requires-python = ">=3.9"
version = "0.0.1"
readme = "README.md"
classifiers = [ "Intended Audience :: Developers", "Programming Language :: Python :: 3" ]
dynamic = ["dependencies"]


[tool.autopep8]
max-line-length = 100